--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="field">
+        <div class="counter">
+            <h1>score: 1</h1>
+        </div>
         <div class="player"></div>
     </div>
     <script src="js/Platform.js"></script>
