--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUN!</title>
     <link rel="stylesheet" href="scss/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="field">
-        <div class="counter">
-            <h1>score: 1</h1>
-        </div>
+        
     </div>
     <script src="js/Platform.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/Blockage.js"></script>
     <script src="js/Move.js"></script>
+    <script src="js/Counter.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
